Add movment & images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,14 @@
         "blue",
         "score",
         "gamefont",
-        "distanceBetween"
+        "distanceBetween",
+        "highscore",
+        "background",
+        "targetImage",
+        "moveX",
+        "moveY",
+        "scalFactor",
+        "impossibility",
+        "maxSpeed"
     ]
 }
