--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
         "moveY",
         "scalFactor",
         "impossibility",
-        "maxSpeed"
+        "maxSpeed",
+        "shootSound",
+        "hitSound"
     ]
 }
