Add libs, menue, persist highscore and refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "impossibility",
         "maxSpeed",
         "shootSound",
-        "hitSound"
+        "hitSound",
+        "anim8"
     ]
 }
