Structuring of the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,8 @@
         "hitSound",
         "anim8",
         "pause",
-        "pauseTimer"
+        "pauseTimer",
+        "game",
+        "menu"
     ]
 }
