Add the quota alpaca

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,8 @@
         "game",
         "menu",
         "cursor",
-        "katha"
+        "katha",
+        "alpaka",
+        "isEating"
     ]
 }
