--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "h",
         "cursorGame",
         "gamestate",
-        "backgroundPause"
+        "backgroundPause",
+        "curser"
     ]
 }
